# RAG-Powered-Website-Chatbot

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
data/vector_store/: chroma.sqlite3
notebook/: document.ipynb
src/: data_loader.py  embedding.py  search.py  vectorstore.py
templates/: index.html
