[project]
name = "rag-powered-website-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.9",
    "faiss-cpu>=1.14.2",
    "fastapi>=0.136.3",
    "firecrawl-py>=4.28.2",
    "ipykernel>=7.2.0",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.1",
    "langchain-firecrawl>=0.1.0",
    "langchain-groq>=1.1.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "uvicorn>=0.49.0",
]
